# NadirClaw

./: README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml  publish.yml
nadirclaw/: __init__.py  auth.py  cli.py  credentials.py  oauth.py  routing.py  server.py  setup.py
patches/: patch-nadirclaw-sophia.sh  routing.py.patched  server.py.patched  settings.py.patched  sophia-customizations.patch
tests/: test_routing.py  test_setup.py
